--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-baseURL: https://example.com
-languageCode: en-us
-defaultContentLanguage: en
+baseURL: https://nd2687.github.io/blog/
+languageCode: ja-jp
+defaultContentLanguage: ja
 title: Cupper
 theme: cupper-hugo-theme
 googleAnalytics: UA-123456789-1
