--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,12 @@
-baseURL: https://nd2687.github.io/blog/
+baseURL: https://nd2687.github.io/blog
 languageCode: ja-jp
 defaultContentLanguage: ja
-title: Cupper
+title: ねる
 theme: cupper-hugo-theme
 googleAnalytics: UA-123456789-1
 disqusShortname: yourdiscussshortname
 enableGitInfo: true
+canonifyurls: true
 
 taxonomies:
   tag: tags
@@ -31,7 +32,7 @@ menu:
       url: /
       weight: 1
     - name: Blog
-      url: /post/
+      url: /posts/
       weight: 2
     - name: Tags
       url: /tags/
