--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://nd2687.github.io/blog
+baseURL: https://relaxed-sinoussi-30c0cf.netlify.com
 languageCode: ja-jp
 defaultContentLanguage: ja
 title: kaw
