Revert "fix baseurl"
This reverts commit 8439f56f3c16c71170a6d64564c3dc859fbb229b.

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://relaxed-sinoussi-30c0cf.netlify.com
+baseURL: https://nd2687.github.io/blog
 languageCode: ja-jp
 defaultContentLanguage: ja
 title: kaw
